src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) void DISOpticalFlow_setGradientDescentIterations_0(void* self, int val);
extern "C" __declspec(dllexport) int DISOpticalFlow_getVariationalRefinementIterations_0(void* self);
extern "C" __declspec(dllexport) void DISOpticalFlow_setVariationalRefinementIterations_0(void* self, int val);
extern "C" __declspec(dllexport) float DISOpticalFlow_getVariationalRefinementAlpha_0(void* self);
extern "C" __declspec(dllexport) void DISOpticalFlow_setVariationalRefinementAlpha_0(void* self, float val);
extern "C" __declspec(dllexport) float DISOpticalFlow_getVariationalRefinementDelta_0(void* self);
extern "C" __declspec(dllexport) void DISOpticalFlow_setVariationalRefinementDelta_0(void* self, float val);
extern "C" __declspec(dllexport) float DISOpticalFlow_getVariationalRefinementGamma_0(void* self);
extern "C" __declspec(dllexport) void DISOpticalFlow_setVariationalRefinementGamma_0(void* self, float val);
extern "C" __declspec(dllexport) float DISOpticalFlow_getVariationalRefinementEpsilon_0(void* self);
extern "C" __declspec(dllexport) void DISOpticalFlow_setVariationalRefinementEpsilon_0(void* self, float val);
extern "C" __declspec(dllexport) bool DISOpticalFlow_getUseMeanNormalization_0(void* self);
extern "C" __declspec(dllexport) void DISOpticalFlow_setUseMeanNormalization_0(void* self, bool val);
extern "C" __declspec(dllexport) bool DISOpticalFlow_getUseSpatialPropagation_0(void* self);
extern "C" __declspec(dllexport) void DISOpticalFlow_setUseSpatialPropagation_0(void* self, bool val);
extern "C" __declspec(dllexport) void* DISOpticalFlow_create_0(int preset);
extern "C" __declspec(dllexport) void DenseOpticalFlow_Delete(void* self);
extern "C" __declspec(dllexport) void DenseOpticalFlow_calc_0(void* self, void* I0, void* I1, void* flow);
extern "C" __declspec(dllexport) void DenseOpticalFlow_collectGarbage_0(void* self);
extern "C" __declspec(dllexport) void ECCParameters_Delete(void* self);
extern "C" __declspec(dllexport) void* ECCParameters_New_0();
extern "C" __declspec(dllexport) int ECCParameters_motionType_get(void* self);
extern "C" __declspec(dllexport) void ECCParameters_motionType_set(void* self, int val);
extern "C" __declspec(dllexport) cv::TermCriteria ECCParameters_criteria_get(void* self);
extern "C" __declspec(dllexport) void ECCParameters_criteria_set(void* self, cv::TermCriteria val);
extern "C" __declspec(dllexport) void* ECCParameters_itersPerLevel_get(void* self);
extern "C" __declspec(dllexport) void ECCParameters_itersPerLevel_set(void* self, void* val);
extern "C" __declspec(dllexport) int ECCParameters_gaussFiltSize_get(void* self);
extern "C" __declspec(dllexport) void ECCParameters_gaussFiltSize_set(void* self, int val);
extern "C" __declspec(dllexport) int ECCParameters_nlevels_get(void* self);
extern "C" __declspec(dllexport) void ECCParameters_nlevels_set(void* self, int val);
extern "C" __declspec(dllexport) int ECCParameters_interpolation_get(void* self);
extern "C" __declspec(dllexport) void ECCParameters_interpolation_set(void* self, int val);
extern "C" __declspec(dllexport) void FarnebackOpticalFlow_Delete(void* self);
extern "C" __declspec(dllexport) int FarnebackOpticalFlow_getNumLevels_0(void* self);
extern "C" __declspec(dllexport) void FarnebackOpticalFlow_setNumLevels_0(void* self, int numLevels);
extern "C" __declspec(dllexport) double FarnebackOpticalFlow_getPyrScale_0(void* self);
extern "C" __declspec(dllexport) void FarnebackOpticalFlow_setPyrScale_0(void* self, double pyrScale);
extern "C" __declspec(dllexport) bool FarnebackOpticalFlow_getFastPyramids_0(void* self);
extern "C" __declspec(dllexport) void FarnebackOpticalFlow_setFastPyramids_0(void* self, bool fastPyramids);
extern "C" __declspec(dllexport) int FarnebackOpticalFlow_getWinSize_0(void* self);
extern "C" __declspec(dllexport) void FarnebackOpticalFlow_setWinSize_0(void* self, int winSize);
extern "C" __declspec(dllexport) int FarnebackOpticalFlow_getNumIters_0(void* self);
extern "C" __declspec(dllexport) void FarnebackOpticalFlow_setNumIters_0(void* self, int numIters);
extern "C" __declspec(dllexport) int FarnebackOpticalFlow_getPolyN_0(void* self);
extern "C" __declspec(dllexport) void FarnebackOpticalFlow_setPolyN_0(void* self, int polyN);
extern "C" __declspec(dllexport) double FarnebackOpticalFlow_getPolySigma_0(void* self);
extern "C" __declspec(dllexport) void FarnebackOpticalFlow_setPolySigma_0(void* self, double polySigma);
extern "C" __declspec(dllexport) int FarnebackOpticalFlow_getFlags_0(void* self);
extern "C" __declspec(dllexport) void FarnebackOpticalFlow_setFlags_0(void* self, int flags);
extern "C" __declspec(dllexport) void* FarnebackOpticalFlow_create_0(int numLevels, double pyrScale, bool fastPyramids, int winSize, int numIters, int polyN, double polySigma, int flags);
extern "C" __declspec(dllexport) void KalmanFilter_Delete(void* self);
extern "C" __declspec(dllexport) void* KalmanFilter_New_0();
extern "C" __declspec(dllexport) void* KalmanFilter_New_1(int dynamParams, int measureParams, int controlParams, int type);
extern "C" __declspec(dllexport) void* KalmanFilter_predict_0(void* self, void* control);
extern "C" __declspec(dllexport) void* KalmanFilter_correct_0(void* self, void* measurement);
extern "C" __declspec(dllexport) void* KalmanFilter_statePre_get(void* self);
extern "C" __declspec(dllexport) void KalmanFilter_statePre_set(void* self, void* val);
extern "C" __declspec(dllexport) void* KalmanFilter_statePost_get(void* self);
extern "C" __declspec(dllexport) void KalmanFilter_statePost_set(void* self, void* val);
extern "C" __declspec(dllexport) void* KalmanFilter_transitionMatrix_get(void* self);