src/OpenCV5Sharp/Generated/NativeMethods.Video.cs

        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void DISOpticalFlow_setGradientDescentIterations_0(DISOpticalFlowHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int DISOpticalFlow_getVariationalRefinementIterations_0(DISOpticalFlowHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void DISOpticalFlow_setVariationalRefinementIterations_0(DISOpticalFlowHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float DISOpticalFlow_getVariationalRefinementAlpha_0(DISOpticalFlowHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void DISOpticalFlow_setVariationalRefinementAlpha_0(DISOpticalFlowHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float DISOpticalFlow_getVariationalRefinementDelta_0(DISOpticalFlowHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void DISOpticalFlow_setVariationalRefinementDelta_0(DISOpticalFlowHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float DISOpticalFlow_getVariationalRefinementGamma_0(DISOpticalFlowHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void DISOpticalFlow_setVariationalRefinementGamma_0(DISOpticalFlowHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float DISOpticalFlow_getVariationalRefinementEpsilon_0(DISOpticalFlowHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void DISOpticalFlow_setVariationalRefinementEpsilon_0(DISOpticalFlowHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool DISOpticalFlow_getUseMeanNormalization_0(DISOpticalFlowHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void DISOpticalFlow_setUseMeanNormalization_0(DISOpticalFlowHandle self, [MarshalAs(UnmanagedType.U1)] bool val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool DISOpticalFlow_getUseSpatialPropagation_0(DISOpticalFlowHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void DISOpticalFlow_setUseSpatialPropagation_0(DISOpticalFlowHandle self, [MarshalAs(UnmanagedType.U1)] bool val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr DISOpticalFlow_create_0(int preset);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void DenseOpticalFlow_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void DenseOpticalFlow_calc_0(DenseOpticalFlowHandle self, MatHandle I0, MatHandle I1, MatHandle flow);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void DenseOpticalFlow_collectGarbage_0(DenseOpticalFlowHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ECCParameters_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ECCParameters_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECCParameters_motionType_get(ECCParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ECCParameters_motionType_set(ECCParametersHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern TermCriteria ECCParameters_criteria_get(ECCParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ECCParameters_criteria_set(ECCParametersHandle self, TermCriteria val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ECCParameters_itersPerLevel_get(ECCParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ECCParameters_itersPerLevel_set(ECCParametersHandle self, IntPtr val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECCParameters_gaussFiltSize_get(ECCParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ECCParameters_gaussFiltSize_set(ECCParametersHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECCParameters_nlevels_get(ECCParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ECCParameters_nlevels_set(ECCParametersHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ECCParameters_interpolation_get(ECCParametersHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ECCParameters_interpolation_set(ECCParametersHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void FarnebackOpticalFlow_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int FarnebackOpticalFlow_getNumLevels_0(FarnebackOpticalFlowHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void FarnebackOpticalFlow_setNumLevels_0(FarnebackOpticalFlowHandle self, int numLevels);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double FarnebackOpticalFlow_getPyrScale_0(FarnebackOpticalFlowHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void FarnebackOpticalFlow_setPyrScale_0(FarnebackOpticalFlowHandle self, double pyrScale);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool FarnebackOpticalFlow_getFastPyramids_0(FarnebackOpticalFlowHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void FarnebackOpticalFlow_setFastPyramids_0(FarnebackOpticalFlowHandle self, [MarshalAs(UnmanagedType.U1)] bool fastPyramids);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int FarnebackOpticalFlow_getWinSize_0(FarnebackOpticalFlowHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void FarnebackOpticalFlow_setWinSize_0(FarnebackOpticalFlowHandle self, int winSize);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int FarnebackOpticalFlow_getNumIters_0(FarnebackOpticalFlowHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void FarnebackOpticalFlow_setNumIters_0(FarnebackOpticalFlowHandle self, int numIters);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int FarnebackOpticalFlow_getPolyN_0(FarnebackOpticalFlowHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void FarnebackOpticalFlow_setPolyN_0(FarnebackOpticalFlowHandle self, int polyN);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double FarnebackOpticalFlow_getPolySigma_0(FarnebackOpticalFlowHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void FarnebackOpticalFlow_setPolySigma_0(FarnebackOpticalFlowHandle self, double polySigma);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int FarnebackOpticalFlow_getFlags_0(FarnebackOpticalFlowHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void FarnebackOpticalFlow_setFlags_0(FarnebackOpticalFlowHandle self, int flags);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr FarnebackOpticalFlow_create_0(int numLevels, double pyrScale, [MarshalAs(UnmanagedType.U1)] bool fastPyramids, int winSize, int numIters, int polyN, double polySigma, int flags);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void KalmanFilter_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr KalmanFilter_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr KalmanFilter_New_1(int dynamParams, int measureParams, int controlParams, int type);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr KalmanFilter_predict_0(KalmanFilterHandle self, IntPtr control);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr KalmanFilter_correct_0(KalmanFilterHandle self, MatHandle measurement);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr KalmanFilter_statePre_get(KalmanFilterHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void KalmanFilter_statePre_set(KalmanFilterHandle self, IntPtr val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr KalmanFilter_statePost_get(KalmanFilterHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void KalmanFilter_statePost_set(KalmanFilterHandle self, IntPtr val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr KalmanFilter_transitionMatrix_get(KalmanFilterHandle self);
